--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Apiwat Chuyintra</title>
+
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="preloading.css" />
     </head>
@@ -16,7 +17,7 @@
             <div></div>
         </div>
         <!-- Whole page -->
-        <div class="site-container" id="siteContainer fadecontent">
+        <div id="pageContent" class="content fadecontent">
             <!-- nav bar -->
             <nav>
                 <div class="logo">logo</div>
