--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <div id="pageContent" class="content fadecontent">
             <!-- nav bar -->
             <nav>
-                <div class="logo">logo</div>
+                <div class="logo">
+                    <!-- logo -->
+                    <span class="logo-name">petchchubby</span
+                    ><span class="since">since 1996</span>
+                </div>
                 <div class="nav-menu">
                     <ul>
                         <a href="">About</a>
