about me finished

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li id="resume"><a href="">Resume</a></li>
                 </ul>
             </nav>
+            <!-- hero container -->
             <div class="hero-container">
                 <div class="hero-content">
                     <div class="one"><p>Hi, my name is</p></div>
@@ -55,6 +56,40 @@
                             >
                         </p>
                     </div>
+                </div>
+            </div>
+            <div class="about-container">
+                <div class="about-content">
+                    <p class="about-header">About me</p>
+                    <p class="about-detail">
+                        Hello, I'm Petch. I'm a general office worker looking
+                        for new experiences in web development or app
+                        development. I started considering this career path when
+                        I had the opportunity to work in IT support at a
+                        company, where I was responsible for ensuring office
+                        equipment functioned smoothly. My manager there wants me
+                        to help manage and maintain websites for clients, which
+                        I find exciting as I enjoy learning new things.
+                        <span style="color: #f9a602; font-weight: bolder"
+                            >I'm a self-learner and I pick up new concepts
+                            fairly quickly.</span
+                        >
+                        Since then, I've been studying to become a full stack
+                        developer. Here are some of the things I've learned:
+                    </p>
+                    <div class="learn">
+                        <div class="HTML">HTML</div>
+                        <div class="CSS">CSS</div>
+                        <div class="JAVASCRIPT">JAVASCRIPT</div>
+                        <div class="WORDPRESS">WORDPRESS</div>
+                    </div>
+                </div>
+                <div class="profile-photo">
+                    <img
+                        src="asset/IMG_0010.jpg"
+                        alt="profile-picture"
+                        style="width: auto; height: 300px"
+                    />
                 </div>
             </div>
         </div>
