--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="one"><p>Hi, my name is</p></div>
                     <div class="two"><p>Apiwat Chuyintra.</p></div>
                     <div class="three">
-                        <p>Driver to innovate and excel in IT field.</p>
+                        <p>Willing to relocate an It field.</p>
                     </div>
                     <div class="four">
                         <p>
