mobile responsive version1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="font.css" />
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="preloading.css" />
+        <link rel="stylesheet" href="responsive.css">
     </head>
     <body onload="activeShowPage()">
         <!-- preloading -->
@@ -85,11 +86,11 @@
                         <div class="WORDPRESS">WORDPRESS</div>
                     </div>
                 </div>
-                <div class="profile-photo">
+                <div class="profile-photo" id="profile-photo">
                     <img
                         src="asset/IMG_0010.jpg"
-                        alt="profile-picture"
-                        style="width: auto; height: 300px"
+                        alt="profile-picture" style="width: 200px; height: 200px;"
+                        
                     />
                 </div>
             </div>
@@ -154,7 +155,7 @@
                                             font-weight: bold;
                                         "
                                     >
-                                        Ramkhamhaeng University<br /><p style="color: white; font-size: 15px; margin-top: 20px;">Bachelor of Political Science Program
+                                        Ramkhamhaeng University<br /><p style="color: white; font-size: 15px; margin-top: 20px;" id="ram">Bachelor of Political Science Program
                                             in Politics and Government.
                                             </p>
                                     </p>
