--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="mycat-container" id="social-container">
                 <div class="mycat-header">Social media</div>
                 <div class="cat-wrapper">
-                    <div class="meetang"><img src="asset/meetang.png" alt="meetang" style="width: auto; height: 400px; padding-top: 40px;"></div>
+                    <div class="meetang"><img src="asset/meetang.png" alt="meetang" style="width: 300px; height: 300px; padding-top: 40px;"></div>
                     <div class="gallery"><a href="http://line.me/ti/p/~@petchchubby" target="_blank"
                         ><img
                           src="asset/line.png"
